src/test/deca/extension/synt/invalid/test_invalid_09.deca
{
    float [] A=[5ffff];
}